fix(util): improved error handling in TypeUtil.createInstance